--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@ title: Matthew Baeckelandt
 subtitle: Personal Website
 use-site-title: true
 ---
+
+<embed src="https://bakeland5.github.io/MatthewBaeckelandtResume.pdf" type="application/pdf" />
