changed header name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
  <head>
      <meta charset="utf-8">
-     <title>Flask Parent Template</title>
+     <title>Matthew Baeckelandt</title>
      <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
      <link rel="stylesheet" href="/static/css/style.css">
@@ -29,7 +29,7 @@
                     </div>
                 </div>
     </div>
- 
+
  </body>
 
 <script>
