added center logo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
  <head>
      <meta charset="utf-8">
-     <title>Matthew Baeckelandt</title>
+     <title>Flask Parent Template</title>
      <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
      <link rel="stylesheet" href="/static/css/style.css">
@@ -12,6 +12,11 @@
 
  <body>
      <div id="particles-js" style="background-color: #1A263A; z-index: -1;"></div>
+     <div class="container-fluid" style="overflow: hidden; margin: auto; position: absolute; top: 10%; text-align: center;">
+                <div class="center">
+                    <img src="/static/img/MattLogo-10.png" style="width: 120px; height: 120px;">
+                </div>
+    </div>
      <div class="container-fluid" style="overflow: hidden; margin: auto; position: absolute; top: 25%; text-align: center;">
                 <div class="center">
                     <strong><h1>Matthew Baeckelandt</h1></strong>
