Infinite improvment of Matt's website

--- a/index.html
+++ b/index.html
@@ -1,75 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<h1> This website used to be awful and has been improved by David Vitale </h1>
 
- <head>
-     <meta charset="utf-8">
-     <title>Matthew Baeckelandt</title>
-     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
-     <link rel="stylesheet" href="/static/css/style.css">
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
- </head>
-
-
- <body>
-     <div id="particles-js" style="background-color: #1A263A; z-index: -1;"></div>
-     <div class="container-fluid" style="overflow: hidden; margin: auto; position: absolute; top: 10%; text-align: center;">
-                <div class="center">
-                    <img src="/static/img/MattLogo-10.png" style="width: 120px; height: 120px;">
-                </div>
-    </div>
-     <div class="container-fluid" style="overflow: hidden; margin: auto; position: absolute; top: 25%; text-align: center;">
-                <div class="center">
-                    <strong><h1>Matthew Baeckelandt</h1></strong>
-                    <h2 style="display: inline;">M.S., Computer Science @</h2> <h2 id="gt" style="color: #B4A46A; display: inline;">Georgia Tech</h2>
-                    <br>
-                    <h2 style="display: inline;">B.S., Engineering Mechanics @</h2> <h2 id="uiuc" style="color: #E84A27; display: inline;">UIUC</h2>
-                    <br> <br> <br> <br>
-                    <div id="menu">
-                      <ul>
-                          <a href="https://github.com/bakeland5"><H4>Github</H4></a>
-                          <a href="https://www.linkedin.com/in/matthewbaeckelandt/"><H4>Linkedin</H4></a>
-                          <a href="/static/assets/Resume.pdf"><H4>Resume</H4></a>
-                          <a href="mailto:matthewbaeckelandt@gmail.com"><H4>Email</H4></a>
-                      </ul>
-                    </div>
-                </div>
-    </div>
-
- </body>
-
-<script>
-    particlesJS.load('particles-js', '/static/assets/particles.json', function() {
-    console.log('callback - particles.js config loaded');
-    });
-    $("#gt").on("click", function(){
-        // console.log('clicked!')
-        window.pJSDom[0].pJS.particles.line_linked.color = "#B4A46A";
-        window.pJSDom[0].pJS.particles.color.value = "#B4A46A";
-        window.pJSDom[0].pJS.fn.particlesRefresh();
-      });
-    $("#uiuc").on("click", function(){
-        // console.log('clicked!')
-        window.pJSDom[0].pJS.particles.line_linked.color = "#E84A27";
-        window.pJSDom[0].pJS.particles.color.value = "#E84A27";
-        window.pJSDom[0].pJS.fn.particlesRefresh();
-      });
-    $("#gt").on("mouseover", function(){
-        // console.log('hover')
-        $(this).stop().animate({ fontSize : '40px' })
-      });
-    $("#gt").on("mouseout", function(){
-        // console.log('hover')
-        $(this).stop().animate({ fontSize : '32px' })
-      });
-    $("#uiuc").on("mouseover", function(){
-        // console.log('hover')
-        $(this).stop().animate({ fontSize : '40px' })
-      });
-    $("#uiuc").on("mouseout", function(){
-        // console.log('hover')
-        $(this).stop().animate({ fontSize : '32px' })
-      });
-</script>
-
-</html>
+<p>Too much JS and CSS, all you need is static HTML with browser default white and black.</p>
